Fixed wrapping on desktop display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,6 @@ main .services {
 main .services .service-cards {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
 	height: 100%;
